2011-07-28  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (resolve_addr): For -gdwarf-2 don't
	optimize DW_AT_data_member_location containing just
	DW_OP_plus_uconst.

	PR debug/49871
	* dwarf2out.c (size_of_die, value_format, output_die): Use
	DW_FORM_udata instead of DW_FORM_data[48] for
	dw_val_class_unsigned_const DW_AT_data_member_location for DWARF 3.

2011-07-25  Andrew Pinski  <apinski@cavium.com>

	PR tree-opt/49671
	* tree-inline.c (remap_gimple_op_r): Copy TREE_THIS_VOLATILE and
	TREE_THIS_NOTRAP into the inner most MEM_REF.
	Always copy TREE_THIS_VOLATILE.
	* tree-sra.c (ptr_parm_has_direct_uses): Check that the lhs, rhs and
	arguments are not volatile references.

2011-07-25  Georg-Johann Lay  <avr@gjlay.de>
	
	PR target/39386
	Backport from mainline r176756
	2011-07-25  Georg-Johann Lay
	* config/avr/avr.c (out_shift_with_cnt): Use tmp_reg as
	shift counter for x << x and x >> x shifts.

2011-07-22  Uros Bizjak  <ubizjak@gmail.com>

	* config.gcc (x86_64-*-linux*): Set
	default_gnu_indirect_function to yes.

2011-07-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45819
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Properly
	preserve volatile and notrap flags.

2011-07-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2011-07-04  Uros Bizjak  <ubizjak@gmail.com>

	PR target/49600
	* config/i386/i386.md (SSE2 int->float split): Push operand 1 in
	general register to memory for !TARGET_INTER_UNIT_MOVES.

2011-07-20  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_class_max_nregs): Fix return type.
	* config/s390/s390-protos.h (s390_class_max_nregs): Likewise.

2011-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49768
	* tree-ssa-ccp.c (fold_nonarray_ctor_reference): Return NULL
	if offset is smaller than bitoffset, but offset+size is bigger
	than bitoffset.

2011-07-18  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49675